# RAG_System_Public_Events

./: README.md  main.py  pyproject.toml
Scripts/: build_index.py  faiss_manager.py  main.py
